--- a/sln/vc10/sample/sample.vcxproj.filters
+++ b/sln/vc10/sample/sample.vcxproj.filters
@@ -10,5 +10,8 @@
     <ClCompile Include="..\..\..\samples\main_arithmetic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\arithmetic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
